[package]

name = "silva"
version = "0.0.1"
authors = [ "Stephen M. Williams <zen323167@zen.co.uk>" ]
edition = "2021"

[profile.release]

[lib]

name = "mysilva"

path = "src/lib.rs"

[[bin]]

name = "mysilva_bin"


[dependencies]

chrono="*"
bit-vec="*"
itertools="0.14.0"
